# AI4Polymers

./: .gitignore  PIMs_family_classification_scheme.md  README.md  README_zh.md  build_primate_cleaned_workbook.mjs  environment.yml  polymer_pim_gas_separation_pipeline.md  primate_data.xlsx  pyproject.toml  task.md  task_zh.md  ~$primate_data.xlsx  ~$项表单(2).doc  结项表单(2).doc
PIMs/: PIMs.rdf
configs/: co2_ch4_descriptor_2d.yaml  co2_ch4_descriptor_2d_3d.yaml  co2_ch4_descriptor_2d_3d_predffv_2d.yaml  co2_ch4_descriptor_2d_3d_predffv_3d.yaml  co2_ch4_descriptor_2d_predffv_2d.yaml  co2_ch4_descriptor_2d_predffv_3d.yaml  co2_ch4_graph_2d.yaml  co2_ch4_graph_2d_predffv_2d.yaml  co2_ch4_graph_2d_predffv_3d.yaml  co2_ch4_graph_3d.yaml  co2_ch4_graph_3d_predffv_2d.yaml  co2_ch4_graph_3d_predffv_3d.yaml  co2_ch4_oracle_ffv.yaml  co2_ch4_screening.yaml  co2_grouped_baseline.yaml  co2_grouped_descriptor_2d.yaml  co2_grouped_descriptor_2d_3d.yaml  co2_grouped_descriptor_2d_3d_predffv_2d.yaml  co2_grouped_descriptor_2d_3d_predffv_3d.yaml  co2_grouped_descriptor_2d_predffv_2d.yaml  co2_grouped_descriptor_2d_predffv_3d.yaml  co2_grouped_graph_2d.yaml  co2_grouped_graph_2d_predffv_2d.yaml  co2_grouped_graph_2d_predffv_3d.yaml  co2_grouped_graph_3d.yaml  co2_grouped_graph_3d_predffv_2d.yaml  co2_grouped_graph_3d_predffv_3d.yaml  co2_grouped_oracle_ffv.yaml  co2_n2_descriptor_2d.yaml  co2_n2_descriptor_2d_3d.yaml  co2_n2_descriptor_2d_3d_predffv_2d.yaml  co2_n2_descriptor_2d_3d_predffv_3d.yaml  co2_n2_descriptor_2d_predffv_2d.yaml  co2_n2_descriptor_2d_predffv_3d.yaml  (+9 more)
pim_ml/: models.py  (+6 more)
(+693 files in other folders)
